--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,9 @@
-# Build and Release Folders
-bin-debug/
-bin-release/
-[Oo]bj/
-[Bb]in/
+# IDE
+.idea
+.vscode
 
-# Other files and folders
-.settings/
+# Node
+node_modules
 
-# Executables
-*.swf
-*.air
-*.ipa
-*.apk
-
-# Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
-# should NOT be excluded as they contain compiler settings and other important
-# information for Eclipse / Flash Builder.
+# MacOS
+.DS_Store
